--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600,700" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Indie+Flower|Lobster|Lobster+Two" rel="stylesheet">
     <link href="src/assets/style.css" rel="stylesheet">
     <title>coffe-vue</title>
   </head>
